<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorTitleBg">

        <TextView
            android:id="@+id/movie_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/movie_title"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            tools:targetApi="jelly_bean" />
    </LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="140dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/movie_poster_iv"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/date_release_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2015"
            android:textSize="25sp"
            android:layout_toRightOf="@+id/movie_poster_iv"
            android:textColor="@color/textDetail"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_toEndOf="@+id/movie_poster_iv"
            android:layout_marginStart="30dp" />
        <TextView
            android:id="@+id/original_language_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_en"
            android:textSize="24sp"
            android:textStyle="italic"
            android:layout_toRightOf="@+id/movie_poster_iv"
            android:layout_below="@+id/date_release_tv"
            android:textColor="@color/textDetail"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_toEndOf="@+id/movie_poster_iv"
            android:layout_marginStart="30dp" />
        <TextView
            android:id="@+id/vote_average_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8_1_10"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/movie_poster_iv"
            android:layout_below="@+id/original_language_tv"
            android:textColor="@color/colorTitleBg"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_toEndOf="@+id/movie_poster_iv"
            android:layout_marginStart="30dp" />
        <Button
            android:id="@+id/button_markAsFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_favorite"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:padding="10dp"
            android:layout_toRightOf="@+id/movie_poster_iv"
            android:layout_below="@+id/vote_average_tv"
            android:background="@color/colorTitleBg"
            android:textColor="@color/Iron"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@+id/movie_poster_iv" />

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="60dp"
                android:layout_below="@+id/button_markAsFavorite"
                android:textColor="@color/textDetail" />

    </RelativeLayout>

</ScrollView>



</FrameLayout>